[project]
name = "shm-ring-buffer"
version = "1.0.0"
description = "A versatile, high-performance ring buffer implementation for Python supporting standard lists, NumPy arrays, and shared memory for inter-process communication."
authors = [
    {name = "Loïc Combis", email = "combis.loic@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["ring-buffer", "circular-buffer", "shared-memory", "ipc", "numpy", "zero-copy", "multiprocessing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware :: Symmetric Multi-processing",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/loic-combis/ring-buffer"
Repository = "https://github.com/loic-combis/ring-buffer"
Issues = "https://github.com/loic-combis/ring-buffer/issues"
Changelog = "https://github.com/loic-combis/ring-buffer/blob/main/CHANGELOG.md"

[tool.poetry]
packages = [{include = "ring_buffer", from = "src"}]

[project.optional-dependencies]
numpy = ["numpy>=1.23.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
